switched to swagger implementation based on oas file
